normalize swagger responses & summaries
