# apps/server/swagger/swagger.json
@@ -27,13 +27,16 @@
             "description": "Email address already taken"
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           },
           "429": {
-            "description": "Too many requests"
+            "$ref": "#/components/schemas/429",
+            "description": "Too Many Requests"
           },
           "502": {
-            "description": "There was a problem sending the activation link"
+            "$ref": "$/definitions/502-activation-link",
+            "description": "Bad Gateway"
           }
         },
         "requestBody": {
@@ -66,16 +69,19 @@
             "description": "Account activated, you can login now"
           },
           "403": {
-            "description": "Account already activated"
+            "$ref": "#/components/schemas/503-account-activated",
+            "description": "Forbidden"
           },
           "409": {
             "description": "No authentication associated with this link"
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           },
           "429": {
-            "description": "Too many requests"
+            "$ref": "#/components/schemas/429",
+            "description": "Too Many Requests"
           }
         },
         "requestBody": {
@@ -100,7 +106,7 @@
         "tags": [
           "Auth (rate limited)"
         ],
-        "summary": "Account activation",
+        "summary": "Account activation token",
         "description": "   ✅ Ensures user with provided email address exists <br />   ✅ Rejects resending activation token if account is already activate <br />   ✅ Sends new activation token to the use <br />   ",
         "parameters": [],
         "responses": {
@@ -108,19 +114,24 @@
             "description": "Link with new activation token has been sent"
           },
           "403": {
-            "description": "Account already activated"
+            "$ref": "#/components/schemas/503-account-activated",
+            "description": "Forbidden"
           },
           "404": {
-            "description": "Provided email address is invalid"
+            "$ref": "#/components/schemas/404-incorrect-email-address",
+            "description": "Not Found"
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           },
           "429": {
-            "description": "Too many requests"
+            "$ref": "#/components/schemas/429",
+            "description": "Too Many Requests"
           },
           "502": {
-            "description": "There was a problem sending the activation link"
+            "$ref": "$/definitions/502-activation-link",
+            "description": "Bad Gateway"
           }
         },
         "requestBody": {
@@ -150,7 +161,8 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": "Auth token was set in cookies"
+            "$ref": "#/components/schemas/200-auth-token",
+            "description": "OK"
           },
           "401": {
             "description": "The given credentials are wrong"
@@ -159,10 +171,12 @@
             "description": "Account not activated"
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           },
           "429": {
-            "description": "Too many requests"
+            "$ref": "#/components/schemas/429",
+            "description": "Too Many Requests"
           }
         },
         "requestBody": {
@@ -192,16 +206,19 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": "Auth token was set in cookies"
+            "$ref": "#/components/schemas/200-auth-token",
+            "description": "OK"
           },
           "400": {
             "description": "FB authentication has failed"
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           },
           "429": {
-            "description": "Too many requests"
+            "$ref": "#/components/schemas/429",
+            "description": "Too Many Requests"
           }
         },
         "requestBody": {
@@ -221,12 +238,12 @@
         }
       }
     },
-    "/api/user/auth/password-change": {
+    "/api/user/auth/password": {
       "post": {
         "tags": [
           "Auth (rate limited)"
         ],
-        "summary": "Password recovery",
+        "summary": "Password reset request",
         "description": "   ✅ Checks if any user belongs to provided email address <br />   ✅ Makes sure that user account is activated <br />   ✅ Generates <b>password token</b> to authorize changing password in the next step (password form) <br />   ",
         "parameters": [],
         "responses": {
@@ -234,16 +251,19 @@
             "description": "Link to reset the password has been sent"
           },
           "404": {
-            "description": "An incorrect email address was provided"
+            "$ref": "#/components/schemas/404-incorrect-email-address",
+            "description": "Not Found"
           },
           "409": {
             "description": "Account must be firstly activated"
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           },
           "429": {
-            "description": "Too many requests"
+            "$ref": "#/components/schemas/429",
+            "description": "Too Many Requests"
           },
           "502": {
             "description": "There was a problem sending the link to reset password"
@@ -280,10 +300,12 @@
             "description": "Link to reset the password is invalid"
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           },
           "429": {
-            "description": "Too many requests"
+            "$ref": "#/components/schemas/429",
+            "description": "Too Many Requests"
           }
         },
         "requestBody": {
@@ -308,6 +330,7 @@
         "tags": [
           "Books"
         ],
+        "summary": "Books searcher",
         "description": "   ✅ Suggest books by author or title <br />   ✅ Searches either books assigned to the user or from the whole store <br />   ",
         "parameters": [
           {
@@ -360,24 +383,29 @@
         "tags": [
           "Cart"
         ],
-        "summary": "Finalizing purchase",
+        "summary": "Stripe payment processing",
         "description": "   ✅ Makes sure that user does not pay for already purchased books <br />   ✅ Checks if selected books are still available in the store <br />   ✅ Processes stripe payment with credit card <br />   ✅ Assigns purchased books to the user <br />   ",
         "parameters": [],
         "responses": {
           "200": {
-            "description": "Successfully purchased new books"
+            "$ref": "#/components/schemas/200-purchased-books",
+            "description": "OK"
           },
           "402": {
-            "description": "Payment has failed"
+            "$ref": "#/components/schemas/402-payment-failed",
+            "description": "Payment Required"
           },
           "404": {
-            "description": "Selected books are not available anymore"
+            "$ref": "#/components/schemas/404-books-not-available",
+            "description": "Not Found"
           },
           "409": {
-            "description": "You have already purchased selected books before"
+            "$ref": "#/components/schemas/409-books-already-purchased",
+            "description": "Conflict"
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           }
         },
         "security": [
@@ -407,7 +435,7 @@
         "tags": [
           "Cart"
         ],
-        "summary": "Finalizing purchase",
+        "summary": "Paypal checkout",
         "description": "   ✅ Makes sure that user does not pay for already purchased books <br />   ✅ Checks if selected books are still available in the store <br />   ✅ Prepares paypal payment details <br />   ✅ Redirects user to paypal checkout <br />   ",
         "parameters": [],
         "responses": {
@@ -430,13 +458,16 @@
             "description": "There was a problem preparing the payment, try again"
           },
           "404": {
-            "description": "Selected books are not available anymore"
+            "$ref": "#/components/schemas/404-books-not-available",
+            "description": "Not Found"
           },
           "409": {
-            "description": "You have already purchased selected books before"
+            "$ref": "#/components/schemas/409-books-already-purchased",
+            "description": "Conflict"
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           }
         },
         "security": [
@@ -466,15 +497,17 @@
         "tags": [
           "Cart"
         ],
-        "summary": "Finalizing purchase",
+        "summary": "Paypal payment processing",
         "description": "   ✅ Checks if user booked paymeny with certain id <br />   ✅ Checks if payment is still in progress <br />   ✅ Finalizes paypal payment and updates its status <br />   ✅ Assigns purchased books to the user <br />   ",
         "parameters": [],
         "responses": {
           "200": {
-            "description": "Successfully purchased new books"
+            "$ref": "#/components/schemas/200-purchased-books",
+            "description": "OK"
           },
           "402": {
-            "description": "Payment has failed"
+            "$ref": "#/components/schemas/402-payment-failed",
+            "description": "Payment Required"
           },
           "404": {
             "description": "Bad payment id"
@@ -483,7 +516,8 @@
             "description": "The order has been already approved"
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           }
         },
         "security": [
@@ -513,6 +547,7 @@
         "tags": [
           "Chat"
         ],
+        "summary": "Chat messages",
         "description": "   ✅ Returns some of the previous messages (implements infinite scroll) <br />   ✅ Mark messages as read by user that requested this endpoint <br />   ",
         "parameters": [
           {
@@ -553,7 +588,8 @@
             }
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           }
         },
         "security": [
@@ -566,6 +602,7 @@
         "tags": [
           "Chat"
         ],
+        "summary": "Sending message",
         "description": "   ✅ Sends text message to others <br />   ✅ Sends push notification <br />   ",
         "parameters": [],
         "responses": {
@@ -573,7 +610,8 @@
             "description": "Message has been sent"
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           }
         },
         "security": [
@@ -650,14 +688,16 @@
         "tags": [
           "Chat"
         ],
+        "summary": "Push notifications",
         "description": "   ✅ Stores web push subscription detail in the database <br />   ✅ Creates many subscriptions per user (user can use multiple devices) <br />   ",
         "parameters": [],
         "responses": {
           "200": {
-            "description": "Subscription has been stored"
+            "description": "Subscription has been saved"
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           }
         },
         "security": [
@@ -687,6 +727,7 @@
         "tags": [
           "Chat"
         ],
+        "summary": "Chat details",
         "description": "   ✅ Returns info related to chatting <br />   ✅ Counts how many messages user missed since last view <br />   ✅ Returns index of last undread message so user can easily scroll to it <br />   ",
         "parameters": [],
         "responses": {
@@ -706,7 +747,8 @@
             }
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           }
         },
         "security": [
@@ -716,16 +758,17 @@
         ]
       }
     },
-    "/api/user/global/auth/token": {
+    "/api/user/global/auth": {
       "get": {
         "tags": [
           "Global"
         ],
+        "summary": "Auth check",
         "description": "   ✅ Checks existance of <b>auth token</b> in cookies and validates it <br />   ✅ Returns proper role to the end user <br />   ",
         "parameters": [],
         "responses": {
           "200": {
-            "description": "Return array of messages",
+            "description": "Returns current role",
             "content": {
               "application/json": {
                 "schema": {
@@ -740,7 +783,8 @@
             }
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           }
         }
       }
@@ -750,11 +794,12 @@
         "tags": [
           "Global"
         ],
+        "summary": "Logout",
         "description": "   ✅ Logs user out <br />   ✅ Removes auth token from cookies <br />   ",
         "parameters": [],
         "responses": {
           "200": {
-            "description": "Return array of messages",
+            "description": "Return guest role",
             "content": {
               "application/json": {
                 "schema": {
@@ -769,7 +814,8 @@
             }
           },
           "422": {
-            "description": "Data validation failed"
+            "$ref": "#/components/schemas/422",
+            "description": "Unprocessable Entity"
           }
         }
       }
@@ -777,6 +823,12 @@
   },
   "components": {
     "schemas": {
+      "422": {
+        "description": "Data validation failed"
+      },
+      "429": {
+        "description": "Too many requests"
+      },
       "role": {
         "type": "object",
         "properties": {
@@ -977,6 +1029,30 @@
         "description": "Link to paypal checkout generated with /paypalCheckout",
         "example": "https://www.sandbox.paypal.com/cgi-bin/webscr?cmd=_express-checkout&token=EC-27H754218P7505C"
       },
+      "502-activation-link": {
+        "description": "There was a problem sending the activation link"
+      },
+      "503-account-activated": {
+        "description": "Account already activated"
+      },
+      "200-auth-token": {
+        "description": "Auth token was set in cookies"
+      },
+      "404-incorrect-email-address": {
+        "description": "Provided email address is incorrect"
+      },
+      "200-purchased-books": {
+        "description": "Successfully purchased new books"
+      },
+      "404-books-not-available": {
+        "description": "Selected books are not available anymore"
+      },
+      "409-books-already-purchased": {
+        "description": "You have already purchased selected books before"
+      },
+      "402-payment-failed": {
+        "description": "Payment has failed"
+      },
       "register": {
         "type": "object",
         "properties": {
@@ -1063,7 +1139,7 @@
           }
         }
       },
-      "post-password-change": {
+      "post-password": {
         "type": "object",
         "properties": {
           "email": {
@@ -1074,7 +1150,7 @@
           }
         }
       },
-      "patch-password-change": {
+      "patch-password": {
         "type": "object",
         "properties": {
           "password": {
